package com.examen_5.Ejercicio_1.Entrega_2.Reservas;

public interface SistemaReservas {
    void reservarMesa();
}

