package com.examen_5.Ejercicio_1.Entrega_2.Reservas;

public class SistemaReservasExterno {
    public void realizarReserva() {
        System.out.println("Reserva realizada en el sistema externo.");
    }
}

